fixing Article alignment

--- a/src/components/article/article.scss
+++ b/src/components/article/article.scss
@@ -38,6 +38,7 @@
     font-size: 1.2em;
     color: $blue-900;
     width: inherit;
+    min-height: 90px;
   }
 
   @media only screen and (max-width: 1200px) {
